--- a/category.html
+++ b/category.html
@@ -276,7 +276,7 @@
           </div>
           <!-- End Filter Bar -->
           <!-- Start Best Seller -->
-          <section class="lattest-product-area pb-40 category-list">
+          <section class="lattest-product-area pb-40 category-list" id="categoryList">
             <div class="row">
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
