--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
                   <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject">
+                  <input class="form-control" name="" id="phoneNumber" type="text" placeholder="Enter phoneNumber">
                 </div>
               </div>
               <div class="col-lg-7">
